# browseruse-agent-bench

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.html  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  EVALUATION_PROTOCOL.md  GOVERNANCE.md  LICENSE  README.md  README_ZH.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent_integration.md  benchmark_task_proposal.md  bug_report.md  feature_request.md  result_submission.md
.github/workflows/: claude.yml  deploy-landing.yml  ghcr-publish.yml  pr-tests.yml  sync-hf-dataset.yml
browseruse_bench/: __init__.py
browseruse_bench/agents/: __init__.py  agent_tars.py  base.py  browser_use.py  claude_code.py  cli_agent.py  codex.py  cursor.py  deepbrowse.py  hermes.py  openai_cua.py  openclaw.py  playwright_mcp.py  registry.py  skyvern.py  webwright.py  webwright_remote_cdp.py
browseruse_bench/agents/site_skills/: VERSION.md
browseruse_bench/browsers/: __init__.py  base.py  login_contexts.py  login_sites.yaml  manager.py  orphan_cleanup.py  registry.py  session_state.py  types.py
browseruse_bench/browsers/providers/: agentbay.py  browserbase.py  browserless.py  cloudnative.py  lexmount.py  local.py
browseruse_bench/cli/: __init__.py  attribute.py  eval.py  leaderboard.py  login.py  run.py  run_eval.py  server.py  service.py  skills.py  submit.py  viz.py
browseruse_bench/data/BrowseComp/: data_info.json  task.jsonl
browseruse_bench/data/BrowseComp-ZH/: data_info.json  task.jsonl  task_sample.jsonl
browseruse_bench/data/LexBench-Browser/: VERSION_HISTORY.md  data_info.json  task.jsonl  task_global.jsonl  task_lexmount.jsonl  task_sample50.jsonl
browseruse_bench/data/LiveBrowseComp/: data_info.json  task.jsonl  task_sample.jsonl
browseruse_bench/data/Online-Mind2Web/: data_info.json  hard.jsonl  task.jsonl
browseruse_bench/data/WebVoyager/: data_info.json
browseruse_bench/eval/: __init__.py  base.py  failure.py  model.py  registry.py  score.py  summary.py
browseruse_bench/eval/browse_comp/: __init__.py  evaluator.py  grader.py
browseruse_bench/eval/lexbench_browser/: __init__.py  add_task_tags.py  evaluator.py  lexmount_eval.py  remove_tags.py  screenshot_cleaner.py
browseruse_bench/eval/online_mind2web/: __init__.py  (+3 more)
browseruse_bench/leaderboard/: __init__.py  generator.py  server.py
browseruse_bench/runner/: agent_runner.py
browseruse_bench/schemas/: __init__.py  _types.py  agent_result.py  eval_result.py  eval_summary.py  prompt.py
browseruse_bench/storage/: __init__.py
browseruse_bench/utils/: __init__.py  api_logger.py  browsecomp_core.py  cli.py  config_loader.py  constants.py  data_loader.py  eval.py  eval_failure.py  gif.py  image_utils.py  json_io.py  llm_cost.py  logger.py  parse_utils.py  prompt_loader.py  repo_root.py  run_identity.py  site_skills.py  stats.py  task.py  utils.py  venv.py
browseruse_bench/visualization/: generate_index.py  index.html  serve.py
community/huggingface/: dataset-card.md
community/launch/: engineering-launch-blog.md  engineering-launch-pack.md
community/leaderboard/: README.md  badges.md  result-card-template.md
community/outreach/: agent-tars-official-result.md  browser-use-official-result.md  official-result-checklist.md  skyvern-official-result.md
community/release/: v1.0.0-benchmark-release-checklist.md
community/results/: README.md
community/tasks/: multilingual-task-proposal-examples.md
configs/: agent_registry.yaml
configs/pricing/: model_pricing.yaml
docs/: cli-agents-deployment.md  docs.json  failure-taxonomy.md  lexbench-automated-evaluation-system.md  rerun-rule-validation-12-models.md  result-rerun-check-rules.md
docs/en/: introduction.mdx  quickstart.mdx
docs/images/: login-flow.drawio
docs/zh/: introduction.mdx  quickstart.mdx
docs_4_codeagent/: architecture-boundaries.md  coding-style.md  error-handling-testing.md  imports-runtime-config.md  pr-auto-fix-loop.md
docs_4_codeagent/plans/: 2026-04-27-eval-base-class.md
docs_4_codeagent/specs/: 2026-04-21-visualization-tree-sidebar-design.md  2026-04-27-eval-base-class-design.md
landing/: index.html
landing/assets/: script.js  style.css
scripts/: analyze_run_results.py  audit_m3_3_api_log_failures.py  build_generation_comparison_docs.py  collect_lexbench_rerun_candidates.py  docker-entrypoint.sh  eval.py  judge_lexbench_failure_taxonomy.py  leaderboard.py  manage_login_session.py  plot_failure_taxonomy_figure.py  plot_generation_failure_comparison.py  run.py  server.py  service.py  skills.py  sync_hf_dataset.py  viz.py
scripts/bash/: run.sh  run_agent_agenttars.sh  run_agent_skyvern.sh  run_agents.sh
tests/: README.md  __init__.py  conftest.py
tests/browseruse_bench/: __init__.py  test_agent_tars_agent.py  test_api_logger.py  test_attribute_cli.py  test_base_agent.py  test_browsecomp.py  test_browser_use_agent.py  test_browsers.py  test_claude_code_agent.py  test_cli.py  test_cli_agent.py  test_cloud_browsers.py  test_codex_agent.py  test_config_loader.py  test_cursor_agent.py  test_deepbrowse_agent.py  test_eval.py  test_eval_base.py  test_eval_cli.py  test_eval_failure.py  test_eval_online_mind2web.py  test_eval_registry.py  test_hermes_agent.py  test_job_submission.py  test_lexbench_text_only_judge.py  test_lexmount_backend.py  test_llm_cost.py  test_logger.py  test_login_cli.py  test_login_contexts.py  test_odysseys.py  test_openclaw_agent.py  test_orphan_cleanup.py  test_registry.py  test_run_agent_dry_run.py  test_run_dependency_sync.py  test_run_identity.py  test_run_manifest.py  test_run_routing.py  test_site_skills.py  (+9 more)
tests/fixtures/: __init__.py  sample_config.yaml  sample_result.json  sample_tasks.json
tests/integration/: __init__.py  test_eval_integration.py  test_lexbench_missing_eval_coverage.py  test_run_integration.py
tests/scripts/: __init__.py  test_agent_runner.py  test_benchmark_loading.py  test_eval_dry_run.py  test_generate_leaderboard.py  test_run_dry_run.py  test_sync_hf_dataset.py
(+211 files in other folders)
